# turbodb

./: .gitignore  .golangci.yml  CONTRIBUTING.md  Makefile  README.md  SCOPE.md  go.mod  go.sum  improvements.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: buf.gen.yaml  buf.yaml
api/v1/: admin.pb.go  admin.proto  admin_grpc.pb.go  engine.pb.go  engine.proto  engine_grpc.pb.go  index.pb.go  index.proto  kv_cache.pb.go  kv_cache.proto  kv_cache_grpc.pb.go
cmd/turbodb-bench/: dataset.go  groundtruth.go  main.go  report.go  report_test.go
cmd/turbodb-ctl/: admin.go  client.go  collection.go  commands.go  formats.go  formats_test.go  index.go  main.go  main_test.go  sync.go
cmd/turbodb-engine/: main.go
cmd/turbodb-soak/: faults.go  main.go  procs.go  scoreboard.go  soak.go  verify.go  workload.go
cmd/turbodb-sync/: engineclient.go  main.go  main_test.go  reconcile.go
cuda/: Makefile
cuda/include/: turboquant.h  turboquant_internal.h  turboquant_kv.h
cuda/src/: codebook.cu  context.cu  fwht.cu  qjl.cu  quantize.cu  search.cu
cuda/tests/: test_fwht.cu  test_quantize.cu
docs/: algorithms.md  architecture.md  gguf-turboquant.md  operations.md
pkg/codebook/: load.go  (+9 more)
postgres/: Makefile  README.md  pg_turboquant--0.1.sql  pg_turboquant.c  pg_turboquant.control  turbodb_ipc.c  turbodb_ipc.h  turbodb_ipc_probe.c
python/: README.md  pyproject.toml
python/turboquant_kv/: __init__.py  _ffi.py  config.py  lmcache_codec.py  sglang_plugin.py  vllm_plugin.py
python/turboquant_kv/tests/: test_config.py  test_plugins.py  test_validation.py
(+187 files in other folders)
